# fastapi-boilerplate

./: README.md  app.py  pyproject.toml
src/globals/: environment.py
src/modules/example/: module.py
